<resources>
    <string name="app_name">Barrel Manager</string>
    <string name="no_history">Aucun historique</string>
    <string name="in_progress">en cours</string>
    <string name="begin_and_end_date">Début : %1$s • Fin : %2$s</string>
    <string name="remove_history">Supprimer l\'historique</string>
    <string name="remove_history_validation">Voulez-vous vraiment supprimer cet historique ?</string>
    <string name="remove">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="modify">Modifier</string>
    <string name="add">Ajouter</string>
    <string name="add_history">Ajouter un historique</string>
    <string name="add_barrel">Ajouter un fût</string>
    <string name="remove_barrel">Supprimer le fût</string>
    <string name="modify_barrel">Modifier le fût</string>
    <string name="remove_barrel_validation">Voulez-vous vraiment supprimer ce fût ? \n \nTous les historiques associés seront définitivement supprimés.</string>
    <plurals name="year">
        <item quantity="one">%d an</item>
        <item quantity="other">%d ans</item>
    </plurals>
    <plurals name="month">
        <item quantity="one">%d mois</item>
        <item quantity="other">%d mois</item>
    </plurals>
    <plurals name="week">
        <item quantity="one">%d semaine</item>
        <item quantity="other">%d semaines</item>
    </plurals>
    <plurals name="day">
        <item quantity="one">%d jour</item>
        <item quantity="other">%d jours</item>
    </plurals>
    <string name="element_and_element">%1$s et %2$s</string>
    <string name="no_barrel_saved">Vous n\'avez pas encore enregistré de fût</string>
    <string name="barrel_name">Nom du fût</string>
    <string name="ex_barrel_name">Ex : Fût n°12</string>
    <string name="barrel_volume">Contenance (litres)</string>
    <string name="ex_barrel_volume">Ex : 2</string>
    <string name="brand">Marque</string>
    <string name="ex_brand">Ex : Allary</string>
    <string name="wood_type">Type de bois</string>
    <string name="ex_wood_type">Ex : Chêne français</string>
    <string name="history_name">Nom de l\'historique</string>
    <string name="begin_date">Date de début</string>
    <string name="optional_end_date">Date de fin (optionnelle)</string>
    <string name="add_photo">Ajouter une photo</string>
    <string name="history">Historique</string>
    <string name="required">requis</string>
    <string name="incoherent_date">La date de fin ne peut pas être antérieure à la date de début</string>
    <string name="date_future">La date de début ne peut pas être dans le future</string>
    <string name="incoherent_alert_date">Les alertes ne peuvent pas être dans le passé</string>
    <string name="alerts">Alertes</string>
    <string name="actions_done">Actions effectuées</string>
    <string name="ongoing_alerts">Alertes à venir</string>
    <string name="alert_action">Alertes / Actions</string>
    <string name="add_alerts">Ajouter une alerte</string>
    <string name="alertTitle">Rappel programmé pour le fût \'%1$s\'</string>
    <string name="alertContent">Rappel : %1$s</string>
    <string name="alert_verify_description">Vérification générale</string>
    <string name="alert_bottle_up_description">Embouteiller</string>
    <string name="alert_taste_description">Déguster</string>
    <string name="alert_change_description">Changer de fût</string>
    <string name="alert_topping_up_description">Effectuer un ouillage</string>
    <string name="alert_move_description">Déplacer le fût</string>
    <string name="alert_racking_description">Soutirer du contenu</string>
    <string name="alert_lees_stirring_description">Effectuer un bâttonage</string>
    <string name="alert_putting_carboy_description">Mise en Dame Jeanne</string>
    <string name="more_actions">Actions supplémentaires</string>
    <string name="advanced_option_up">▲ Options avancées</string>
    <string name="advanced_option_down">▼ Options avancées</string>
    <string name="heating_type">Type de chauffe</string>
    <string name="heating_type_exemple">Ex: moyenne</string>
    <string name="storage_hygrometer">Hygrométrie de stockage (%)</string>
    <string name="storage_hygrometer_exemple">Ex: 75</string>
    <string name="storage_temperature">Température de stockage (°C)</string>
    <string name="storage_temperature_ex">Ex: 12</string>
    <string name="detailed_description">Description détaillée</string>
    <string name="angels_share">Part des anges (%)</string>
    <string name="alcoolic_strenght">Titre alcoométrique (%)</string>
    <string name="aging">Vieillissement</string>
    <string name="seasonning">Marquage</string>
    <string name="mix">Mixte</string>
    <string name="see_more">Voir plus</string>
    <string name="see_less">Voir moins</string>
    <string name="next_alert">Prochaine rendez-vous : %1$s (%2$s)</string>
    <string name="history_type">Type d\'historique</string>
    <string name="technical_barrel_sheet">Fiche technique du fût</string>
    <string name="since">Depuis le</string>
    <string name="barrel_history">Historique du fût</string>
    <string name="generated_by">Généré avec</string>
    <string name="export_pdf">Exporter en PDF</string>
    <string name="export_qr">Générer QR cloud</string>
    <string name="rate_popup_title">Vous aimez Barrel Manager ?</string>
    <string name="rate_popup_description">Soutenez le projet en laissant une note sur le Play Store !</string>
    <string name="note_app">Noter</string>
    <string name="later">Plus tard</string>
    <string name="import_image">Importer une photo</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="first_history_date">Date de première mise en fût</string>
    <string name="aging_number">Nombre de vieillissements</string>
    <string name="statistics">Statistiques</string>
    <string name="total_duration">Durée Totale d\'activité</string>
    <string name="record_max">Plus long vieillissement</string>
    <string name="average_alcohol">Degré d\'alcool moyen</string>
    <string name="nb_days">%1$s jours</string>
    <string name="type_repartition">Répartition des types de vieillissements</string>
    <string name="duration_repartition">Durée de vieillissement moyenne par type (jours)</string>
    <string name="average_angel_share">Part des anges moyenne</string>
    <string name="error_upload">Erreur lors de l\'upload</string>
    <string name="no_image_viewer_error">Aucune application trouvée permettant visualiser une image</string>
    <string name="error_google_connexion">Connexion Google échouée</string>
    <string name="generate_qr_cloud">Générer un QR Cloud</string>
    <string name="generate_qr_cloud_confirm">La génération du QR cloud implique d\'importer le fichier dans votre Google Drive personnel pour le rendre accessible via un lien public. Acceptez-vous ?</string>
    <string name="refuse">Refuser</string>
    <string name="accept">Accepter</string>
    <string name="google_drive_import">Importation vers Google Drive…</string>
    <string name="error_google_authent">Erreur d\'authentification Google (Code %1$s)</string>
    <string name="equivalence_228">Équivalence fût standard : %1$s</string>
    <string name="duration_equivalence_tooltip">Grâce au format %1$sL, le contact bois/liquide est %2$sx plus intense que dans un fût standard (228L).</string>
    <string name="wood">Bois</string>
    <string name="oxydation">Oxydation</string>
    <string name="current_ageing">📍 Vieillissement actuel</string>
    <string name="verdict">💡 %1$s</string>
    <string name="start_phase">Phase de démarrage - Le bois commence à peine à s\'infuser.</string>
    <string name="ageing_phase">Phase d\'élevage - Dominance boisée. Attendez que l\'oxydation apporte de la rondeur.</string>
    <string name="maturation_phase">Maturation noble - L\'oxydation a pris le dessus, le profil s\'affine.</string>
    <string name="harmony_phase">Équilibre - Le bois et l\'air sont en harmonie. Prêt pour dégustation !</string>
    <string name="tannin_chart_title">Profil de maturation \u24D8</string>
    <string name="high_evaporation">Taux d\'évaporation élevé dû à la chaleur.</string>
    <string name="slow_and_preserved_ageing">Vieillissement lent et préservé (chai frais).</string>
    <string name="controlled_evaporation">Évaporation régulière et contrôlée.</string>
    <string name="dry_environment">Environnement sec : l\'eau s\'évapore plus vite, le taux d\'alcool va probablement augmenter.</string>
    <string name="damp_environment">Environnement humide : l\'alcool s\'évapore plus vite, votre vieillissement gagnera en souplesse.</string>
    <string name="balanced_humidity">Humidité équilibrée : évolution stable du profil.</string>
    <string name="significant_volume_loss">\n⚠️ Perte de volume importante : surveillez votre fût de près !</string>
    <string name="estimated_loss">📍 Perte estimée</string>
    <string name="evaporation">Évaporation (%)</string>
    <string name="angels_share_estimation">Estimation de la Part des Anges \u24D8</string>
    <string name="tannin_estimation_tooltip">Cette simulation modélise l\'équilibre entre l\'apport aromatique du bois et son assouplissement au fil du temps (oxydation). Elle prend en compte le volume du fût (%1$sL), et son usage précédent (%2$s jours).\nCompter une marge d\'erreur de 10–20%%.</string>
    <string name="angels_share_estimation_tooltip">L\'estimation de la part des anges prend en compte le volume du fût (%1$sL), la température (%2$s°C) et l\'hygrométrie de stockage (%3$s%%).\nNote : En l\'absence de saisie, les valeurs standard de conservation sont appliquées.</string>
    <string name="zip_export">Exporter un ZIP</string>
    <string name="zip_import">Importer un ZIP</string>
    <string name="zip_export_success">Archive ZIP exportée avec succès !</string>
    <string name="data_json_missing">Le fichier data.json est manquant dans l\'archive</string>
    <string name="zip_import_success">Import réussi !</string>
    <string name="zip_import_error">Erreur lors de l\'import !</string>
    <string name="imported_file_incompatible">Le fichier importé n\'est pas compatible</string>
    <string name="barrel_image">Image du fut</string>
    <string name="camera_icon">Icone de l\'appareil photo</string>
    <string name="barrel_button_description">Bouton pour gérer l\'ajout de fut</string>
    <string name="barrel_name_required">Le nom du fût est requis</string>
    <string name="volume_required">Le volume est requis</string>
    <string name="brand_required">La marque est requise</string>
    <string name="wood_type_required">Le type de bois est requis</string>
    <string name="barrel_modified_success">Fût modifié avec succès</string>
    <string name="barrel_added_success">Fût ajouté avec succès</string>
    <string name="barrel_save_error">Erreur lors de la sauvegarde du fût</string>
    <string-array name="type_fut_array">
        <item>Vieillissement</item>
        <item>Marquage</item>
        <item>Mixte</item>
    </string-array>
    <string-array name="wood_types_array">
        <item>Chêne Français</item>
        <item>Chêne Américain</item>
        <item>Chêne Européen</item>
        <item>Acacia</item>
        <item>Châtaignier</item>
        <item>Cerisier</item>
        <item>Mûrier</item>
    </string-array>
    <string-array name="heating_types_array">
        <item>Légère</item>
        <item>Moyenne</item>
        <item>Moyenne Plus</item>
        <item>Forte</item>
        <item>Forte Plus</item>
        <item>Vapeur</item>
    </string-array>
</resources>