<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_edit_barrel"
        android:title="@string/modify"
        android:icon="@drawable/ic_edit"/>

    <item
        android:id="@+id/action_delete_barrel"
        android:title="@string/remove"
        android:icon="@drawable/ic_delete"/>

    <item
        android:id="@+id/barrel_take_picture"
        android:title="@string/take_picture"
        android:icon="@drawable/ic_delete"/>

    <item
        android:id="@+id/barrel_import_image"
        android:title="@string/import_image"
        android:icon="@drawable/ic_delete"/>

    <item
        android:id="@+id/action_pdf_export"
        android:title="@string/export_pdf"
        android:icon="@drawable/ic_delete"/>

    <item
        android:id="@+id/action_qr_export"
        android:title="@string/export_qr"
        android:icon="@drawable/ic_delete"/>

</menu>
