<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Nom -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/history_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date début -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/begin_date"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBeginDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date fin -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/optional_end_date"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/edtHistoryType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:entries="@array/type_fut_array" />

        <!-- ===== OPTIONS AVANCÉES ===== -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/txtToggleAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/advanced_option_down"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <!-- CONTENU AVANCÉ -->
        <LinearLayout
            android:id="@+id/layoutAdvanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="8dp">

            <!-- Description détaillée -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detailed_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:maxLines="8"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Part des anges -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/angels_share">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAngelsShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Titre alcoométrique -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/alcoolic_strenght">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAlcohol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- ===== ALERTES ===== -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/alert_action"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/alertsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_alerts"
            app:icon="@drawable/ic_add"
            app:iconGravity="textStart"
            style="@style/Widget.Material3.Button.TextButton" />

    </LinearLayout>
</ScrollView>
